--- a/styles/viewDrinks/redirects/combinados.css
+++ b/styles/viewDrinks/redirects/combinados.css
@@ -10,7 +10,6 @@
     width: 101vw;
     min-height: 100vh;
 }
-
 .encabezado1 {
     display: flex;
     justify-content: center;
@@ -50,7 +49,7 @@
 .producto1 {
     display: flex;
     margin-bottom: 2.5vh;
-    z-index: 2;
+    z-index: 1;
 }
 .flexTitle {
     display: flex;
